--- a/styles/footer.css
+++ b/styles/footer.css
@@ -68,3 +68,11 @@ section{
     flex-direction: column;
     justify-content: space-around;
 }
+
+
+footer{
+    color: #464646;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
